--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       method: 'GET',
       headers: {
         accept: 'application/json',
-        Authorization: 'API_KEY'
+        Authorization: '${API_KEY}'
       }
     };
 
