--- a/index.html
+++ b/index.html
@@ -128,14 +128,16 @@
     });
   }
 
-  async function fetchMovies() {
-    const options = {
-      method: 'GET',
-      headers: {
-        accept: 'application/json',
-        Authorization: '${API_KEY}'
-      }
-    };
+async function fetchMovies() {
+  try {
+    const response = await fetch('/api/movies');
+    const data = await response.json();
+    const movies = data.results;
+    updateMoviesOnPage(movies);
+  } catch (error) {
+    console.error(error);
+  }
+}
 
     try {
       const response = await fetch('https://api.themoviedb.org/3/movie/upcoming?language=en-US&page=1', options);
