--- a/index.html
+++ b/index.html
@@ -128,16 +128,14 @@
     });
   }
 
-async function fetchMovies() {
-  try {
-    const response = await fetch('/api/movies');
-    const data = await response.json();
-    const movies = data.results;
-    updateMoviesOnPage(movies);
-  } catch (error) {
-    console.error(error);
-  }
-}
+  async function fetchMovies() {
+    const options = {
+      method: 'GET',
+      headers: {
+        accept: 'application/json',
+        Authorization: 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJkMjliZThlMWQxM2E0ODllN2VlZDJhZWRiN2Y3M2FhNCIsInN1YiI6IjY2MGVlODQ1ZTE4ZTNmMDE3ZGE0NGM3YiIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.5VvOvFTka2N-dfsMwtIAstcUQLpvmAFVR9OpVp51HGc'
+      }
+    };
 
     try {
       const response = await fetch('https://api.themoviedb.org/3/movie/upcoming?language=en-US&page=1', options);
